--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
+    "port": "^0.8.1",
     "sequelize": "^6.6.2",
     "socket.io": "^4.1.2"
   }
