--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.17.x"
+  },
   "scripts": {
     "start": "node app.js",
     "devStart": "nodemon app.js",
