--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-ws": "^5.0.2",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.12",
     "port": "^0.8.1",
